active section working

--- a/index.html
+++ b/index.html
@@ -9,25 +9,40 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">
     <!-- Load Styles -->
     <link href="css/styles.css" rel="stylesheet">
+
 </head>
 <body>
 <!-- HTML Follows BEM naming conventions
 IDs are only used for sections to connect menu achors to sections -->
-<header class="page__header">
+<div class="page__header">
     <nav class="navbar__menu">
         <!-- Navigation starts as empty UL that will be populated with JS -->
 
-        <ul>
-            <li class="menu__link">test</li>
-            <li class="menu__link">test</li>
-            <li class="menu__link">test</li>
-            <li class="menu__link">test</li>
-            <li class="menu__link">test</li>
+<!--        <button type="button" class="newSectionBtn">new section</button>-->
+        <ul id="navbar__list">
+            <li class="menu__link your-active-tab" data-cont  =".section1">
+                <a href="#section1">Section 1</a>
+
+            </li>
+            <li class="menu__link" data-cont=".section2">
+                <a href="#section2">Section 2</a>
+
+            </li>
+            <li class="menu__link" data-cont=".section3">
+                <a href="#section3">Section 3</a>
+
+            </li>
+            <li class="menu__link" data-cont=".section4">
+                <a href="#section4">Section 4</a>
+
+            </li>
         </ul>
 
-        <ul id="navbar__list"></ul>
+
     </nav>
-</header>
+
+
+</div>
 <main>
     <header class="main__hero">
         <h1>Landing Page </h1>
@@ -36,7 +51,7 @@ IDs are only used for sections to connect menu achors to sections -->
     a data attribute that will populate the li node.
     Adding more sections will automatically populate nav.
     The first section is set to active class by default -->
-    <section id="section1" data-nav="Section 1" class="your-active-class">
+    <section id="section1"  data-nav="Section 1" class="your-active-class">
         <div class="landing__container">
             <h2>Section 1</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
@@ -52,7 +67,7 @@ IDs are only used for sections to connect menu achors to sections -->
                 porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
         </div>
     </section>
-    <section id="section2" data-nav="Section 2">
+    <section id="section2"  data-nav="Section 2">
         <div class="landing__container">
             <h2>Section 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
@@ -68,7 +83,7 @@ IDs are only used for sections to connect menu achors to sections -->
                 porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
         </div>
     </section>
-    <section id="section3" data-nav="Section 3">
+    <section id="section3"  data-nav="Section 3">
         <div class="landing__container">
             <h2>Section 3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
@@ -84,10 +99,27 @@ IDs are only used for sections to connect menu achors to sections -->
                 porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
         </div>
     </section>
+    <section id="section4"  data-nav="Section 4">
+        <div class="landing__container">
+            <h2>Section 4</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
+                dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex.
+                Phasellus imperdiet porta orci eget mollis. Sed convallis sollicitudin mauris ac tincidunt. Donec
+                bibendum, nulla eget bibendum consectetur, sem nisi aliquam leo, ut pulvinar quam nunc eu augue.
+                Pellentesque maximus imperdiet elit a pharetra. Duis lectus mi, aliquam in mi quis, aliquam porttitor
+                lacus. Morbi a tincidunt felis. Sed leo nunc, pharetra et elementum non, faucibus vitae elit. Integer
+                nec libero venenatis libero ultricies molestie semper in tellus. Sed congue et odio sed euismod.</p>
+
+            <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel
+                luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur
+                porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
+        </div>
+    </section>
+
 </main>
 <footer class="page__footer">
     <p>&copy Udacity</p>
 </footer>
-
+<script src="js/app.js"></script>
 </body>
 </html>
