--- a/index.html
+++ b/index.html
@@ -16,29 +16,8 @@
 IDs are only used for sections to connect menu achors to sections -->
 <div class="page__header">
     <nav class="navbar__menu">
-        <!-- Navigation starts as empty UL that will be populated with JS -->
-
-<!--        <button type="button" class="newSectionBtn">new section</button>-->
-        <ul id="navbar__list">
-            <li class="menu__link your-active-tab" data-cont  =".section1">
-                <a href="#section1">Section 1</a>
-
-            </li>
-            <li class="menu__link" data-cont=".section2">
-                <a href="#section2">Section 2</a>
-
-            </li>
-            <li class="menu__link" data-cont=".section3">
-                <a href="#section3">Section 3</a>
-
-            </li>
-            <li class="menu__link" data-cont=".section4">
-                <a href="#section4">Section 4</a>
-
-            </li>
-        </ul>
-
-
+      <!-- Navigation starts as empty UL that will be populated with JS -->
+      <ul id="navbar__list"></ul>
     </nav>
 
 
