--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ IDs are only used for sections to connect menu achors to sections -->
     a data attribute that will populate the li node.
     Adding more sections will automatically populate nav.
     The first section is set to active class by default -->
-    <section id="section1"  data-nav="Section 1" class="your-active-class">
+    <section id="section1"  data-nav="Section 1" >
         <div class="landing__container">
             <h2>Section 1</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
