--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">
     <!-- Load Styles -->
     <link href="css/styles.css" rel="stylesheet">
-
 </head>
 <body>
 <!-- HTML Follows BEM naming conventions
@@ -17,7 +16,9 @@ IDs are only used for sections to connect menu achors to sections -->
 <div class="page__header">
     <nav class="navbar__menu">
         <!-- Navigation starts as empty UL that will be populated with JS -->
-        <ul id="navbar__list"></ul>
+        <ul id="navbar__list">
+
+        </ul>
     </nav>
 
 
