--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">
     <!-- Load Styles -->
     <link href="css/styles.css" rel="stylesheet">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
 <!-- HTML Follows BEM naming conventions
 IDs are only used for sections to connect menu achors to sections -->
-<div class="page__header">
+<header class="page__header">
     <nav class="navbar__menu">
-      <!-- Navigation starts as empty UL that will be populated with JS -->
-      <ul id="navbar__list"></ul>
+        <!-- Navigation starts as empty UL that will be populated with JS -->
+        <ul id="navbar__list"></ul>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </nav>
 
 
-</div>
+</header>
 <main>
     <header class="main__hero">
         <h1>Landing Page </h1>
@@ -30,7 +35,7 @@ IDs are only used for sections to connect menu achors to sections -->
     a data attribute that will populate the li node.
     Adding more sections will automatically populate nav.
     The first section is set to active class by default -->
-    <section id="section1"  data-nav="Section 1" >
+    <section id="section1" data-nav="Section 1">
         <div class="landing__container">
             <h2>Section 1</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
@@ -46,7 +51,7 @@ IDs are only used for sections to connect menu achors to sections -->
                 porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
         </div>
     </section>
-    <section id="section2"  data-nav="Section 2">
+    <section id="section2" data-nav="Section 2">
         <div class="landing__container">
             <h2>Section 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
@@ -62,7 +67,7 @@ IDs are only used for sections to connect menu achors to sections -->
                 porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
         </div>
     </section>
-    <section id="section3"  data-nav="Section 3">
+    <section id="section3" data-nav="Section 3">
         <div class="landing__container">
             <h2>Section 3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
@@ -78,7 +83,7 @@ IDs are only used for sections to connect menu achors to sections -->
                 porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
         </div>
     </section>
-    <section id="section4"  data-nav="Section 4">
+    <section id="section4" data-nav="Section 4">
         <div class="landing__container">
             <h2>Section 4</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
